--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "https://github.com/Hrithikcse52/cra-template-ts-tailwind-prettier-eslint"
   },
+  "scripts": {
+    "release": "standard-version"
+  },
   "files": [
     "template",
     "template.json"
@@ -20,5 +23,8 @@
     "typescript"
   ],
   "author": "Hrithik Prasad",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "standard-version": "^9.5.0"
+  }
 }
