--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -22,6 +22,6 @@ jobs:
           registry-url: https://registry.npmjs.org/
           always-auth: 'true'
       - run: npm i
-      - run: npm publish --registry=https://registry.npmjs.org/
+      - run: npm run release
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
