--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/Hrithikcse52/cra-template-ts-tailwind-prettier-eslint"
   },
   "scripts": {
-    "release": "standard-version"
+    "release": "standard-version && git push --follow-tags origin main && npm publish"
   },
   "files": [
     "template",
