--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "url": "https://github.com/Hrithikcse52/cra-template-ts-tailwind-prettier-eslint"
   },
   "scripts": {
-    "test": ""
+    "release": "standard-version"
   },
-  "files": ["template", "template.json"],
+  "files": [
+    "template",
+    "template.json"
+  ],
   "keywords": [
     "react",
     "create-react-app",
@@ -20,5 +23,8 @@
     "typescript"
   ],
   "author": "Hrithik Prasad",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "standard-version": "^9.5.0"
+  }
 }
